--- a/src/Controller/style.module.scss
+++ b/src/Controller/style.module.scss
@@ -11,6 +11,11 @@ $padding: 4px;
   padding: $padding;
   width: $column-count * $grid-size / 2 + ($column-count - 1) * $grid-gap +
     $padding * 2;
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .button {
