--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,6 @@
 html {
   font-size: 16px;
   font-family: sans-serif;
-  height: 102vh;
 }
 
 * {
@@ -23,4 +22,13 @@ html {
 body {
   margin: 0;
   background-color: var(--background);
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
