--- a/src/styles.css
+++ b/src/styles.css
@@ -22,9 +22,9 @@ html {
 body {
   margin: 0;
   background-color: var(--background);
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow: auto;
 }
 
 #root {
