--- a/src/Background/style.module.scss
+++ b/src/Background/style.module.scss
@@ -1,14 +1,17 @@
 .background {
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
 }
 
 .message {
   position: absolute;
   color: var(--primary);
   animation: hideMessage 5s linear forwards;
-  z-index: 1;
   pointer-events: none;
+  caret-color: transparent;
+  user-select: none;
   max-width: 200px;
 }
 
